--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,24 @@
     <artifactId>pdfconverter</artifactId>
     <name>pdfconverter</name>
     <version>1.0.0</version>
-    <description>stormbuster</description>
+    <description>Converter scanned pdf files to textsearch pdf files</description>
+
     <properties>
         <java.version>21</java.version>
     </properties>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.0</version>
+        <relativePath/>
+    </parent>
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-textract</artifactId>
@@ -43,7 +55,11 @@
             <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
