--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.main.web-application-type=none
-pdf.output.path.prefix=Text_Search
-pdf.input.path=files/Untitled design (6)-3.pdf
+pdf.output.path=files/result/
+pdf.input.path=files/2024.07.11 Deed (original).pdf
 aws.access.key=${AWS_ACCESS_KEY}
 aws.secret.key=${AWS_SECRET_KEY}
 font_size=10
