change the logic according the requirements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.main.web-application-type=none
-pdf.output.path=files/result/
-pdf.input.path=files/2024.07.11 Deed (original).pdf
-aws.access.key=${AWS_ACCESS_KEY}
-aws.secret.key=${AWS_SECRET_KEY}
-font_size=10
+aws.access.key=
+aws.secret.key=
+aws.region=US_WEST_2
+aws.s3.bucket=bucketName
+aws.s3.object=FedEx.pdf
+
